@@ -24,6 +24,7 @@
  */
 
 use Packetery\Exceptions\SenderGetReturnRoutingException;
+use Packetery\Weight\Converter;
 
 require_once(dirname(__FILE__) . '../../../config/config.inc.php');
 require_once(dirname(__FILE__) . '../../../classes/Cookie.php');
@@ -208,7 +209,7 @@ class Packeteryclass
             foreach ($orders as $index => $order) {
                 if ($order['weight'] === null) {
                     $orderInstance = new \Order($order['id_order']);
-                    $order['weight'] = $orderInstance->getTotalWeight();
+                    $order['weight'] = Converter::getKilograms($orderInstance->getTotalWeight());
                     $orders[$index] = $order;
                 }
             }
@@ -254,12 +255,12 @@ class Packeteryclass
             $currency = new Currency($order->id_currency);
 
             $weight = '';
-            if (strtolower(Configuration::get('PS_WEIGHT_UNIT')) === PacketeryApi::PACKET_WEIGHT_UNIT) {
+            if (Converter::isKgConvertionSupported()) {
                 if ($packeteryOrder['weight'] !== null) {
                     // used saved if set
                     $weight = $packeteryOrder['weight'];
                 } else {
-                    $weight = $order->getTotalWeight();
+                    $weight = Converter::getKilograms($order->getTotalWeight());
                 }
             }
 
