@@ -23,7 +23,7 @@ $_MODULE['<{packetery}prestashop>packetery_e80d50c020e2486595c969fae46393d1'] = 
 $_MODULE['<{packetery}prestashop>packetery_5ef3da0443efa6318d07751b9b680941'] = 'Doručení na adresu';
 $_MODULE['<{packetery}prestashop>packetery_0001316ad0c7eb0f1a8e298fd6e5d070'] = 'Exportováno';
 $_MODULE['<{packetery}prestashop>packetery_5068c162a60b5859f973f701333f45c5'] = 'Trasovací číslo';
-$_MODULE['<{packetery}prestashop>packetery_8c489d0946f66d17d73f26366a4bf620'] = 'Hmotnost';
+$_MODULE['<{packetery}prestashop>packetery_91721604210524b7051d99c4c8478715'] = 'Hmotnost (kg)';
 $_MODULE['<{packetery}prestashop>packetery_0ace50d3fdc56a8b3ecf3532baa0990c'] = 'Výdejní místa Zásilkovny';
 $_MODULE['<{packetery}prestashop>packetery_85ad5aeec9dfb9e0650de5fbfecd88da'] = 'Všechna výdejní místa (Zásilkovna + dopravci)';
 $_MODULE['<{packetery}prestashop>packetery_b718adec73e04ce3ec720dd11a06a308'] = 'ID';
@@ -54,7 +54,7 @@ $_MODULE['<{packetery}prestashop>packetery_fd89a76dd57bc66978a87fafd458c7c8'] = 
 $_MODULE['<{packetery}prestashop>packetery_43e4c4c34b72c8ee0421d21983d8d8a7'] = 'Nevyexportováno! Chyba:';
 $_MODULE['<{packetery}prestashop>packetery_584ad3e893aa1c232f67116fc2686325'] = 'Počet nastavených hmotností';
 $_MODULE['<{packetery}prestashop>packetery_047c5943be09f5e6a0711ff242153735'] = 'Počet chyb během nastavování hmotností';
-$_MODULE['<{packetery}prestashop>packetery_88a4478629eacd06dbbe1a47306a39b9'] = 'Výchozí jednotka hmotnosti pro Váš obchod je: %s. Při exportu zásilek modul nebude u zásilky uvádět její hmotnost. Pokud chcete exportovat hmotnost zásilky je potřeba nastavit výchozí jednotku na kg.';
+$_MODULE['<{packetery}prestashop>packetery_91c3f498fbbc9f6961c22401cdb145bf'] = 'Výchozí jednotka hmotnosti pro Váš obchod je: %s. Při exportu zásilek modul nebude u zásilky uvádět její hmotnost. Pokud chcete exportovat hmotnost zásilky je potřeba nastavit výchozí jednotku na kg nebo g.';
 $_MODULE['<{packetery}prestashop>packetery_b18ce70ed15a7a117141d6ee14f9138c'] = 'Výdejní místo bylo úspěšně změněno.';
 $_MODULE['<{packetery}prestashop>packetery_f1111e5bc2fc07a2985e5273341fbd7b'] = 'Výdejní místo se nepodařilo změnit.';
 $_MODULE['<{packetery}prestashop>packetery_47838d234bae5339a17c704bb605d01a'] = 'U objednávky není vybrané žádné výdejní místo. Zásilku nebude možné exportovat do Zásilkovny.';
