@@ -69,6 +69,7 @@
 2.1.10 - Fixed: widget opening in order administration
 	     - Fixed: Fix: weight units - accepting capital letters	
 2.1.11 - Updated: order weight editing in Packeta order administration: saving only changed values, better display of results
+       - Added: Product weight in grams is now supported. If the weight of the products is in grams, the module converts the weight of the shipment to kilograms before exporting it.
        - Updated: pickup point update changed to carrier update, improving speed and reliability
        - Fixed: no more displaying of selected pickup point on confirmation page if the order is not a pickup point order
        - Updated: wider support for modified checkout templates (selector to hide widget button update),
